--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,15 @@
     <string name="loading_events">Click the button to load the events</string>
     <string name="image_find_text">Find what\'s going on in Berlin tonight!</string>
 
+    <!-- Date Activity -->
+    <string name="events_for_today">These are the events for today</string>
+    <string name="events_for_tomorrow">These are the events for tomorrow</string>
+    <string name="events_for_a">The events for </string>
+    <string name="no_network">No network connection available</string>
+    <string name="searching">Searching for new events</string>
+    <string name="no_new_events">There are no new events to be added</string>
+    <string name="new_events"> new events added</string>
+
     <!-- Event Activity -->
     <string name="events_name">Name of the event</string>
     <string name="extra_info">Event\'s info:</string>
@@ -24,6 +33,7 @@
     <string name="events_map_tag">Location of the event</string>
     <string name="events_interesting">Mark if you find this event interesting</string>
     <string name="events_location">There is no known location for this event</string>
+    <string name="mark_event">You marked this event as interesting</string>
 
     <!-- Settings Activity -->
     <string name="multilist_title">Events sources</string>
@@ -33,12 +43,12 @@
     <string name="about_summary">General information about Berlin Event Curator</string>
     <string name="legal_title">Legal Notices</string>
     <string name="legal_summary">Legal attributions to services that Berlin Event Curator uses</string>
-    
+
     <!-- Legal Noticies Activity -->
     <string name="googleplay_tag">Google Play services attribution:</string>
     <string name="googleplay_attribution">Google play services is not available at the moment</string>
 
-<!--       Info Activity -->
+    <!-- Info Activity -->
     <string name="version">Version 1.0</string>
     <string name="development">Developed by:</string>
     <string name="my_name">Álvaro Santisteban Diéguez</string>
@@ -50,6 +60,7 @@
     <!-- Menu item name -->
     <string name="menu_settings">Settings</string>
     <string name="menu_calendar">Calendar</string>
+    <string name="menu_refresh">Refresh</string>
 
     <!-- General, blanks and no infos -->
     <string name="image_content_description">No content description for this image</string>
@@ -70,7 +81,6 @@
         <item>Stress Faktor</item>
         <item>Index</item>
     </string-array>
-    
     <string-array name="default_sites_array">
         <item>I Heart Berlin</item>
         <item>White Trash</item>
@@ -89,7 +99,5 @@
         <item>Stress Faktor</item>
         <item>Index</item>
     </string-array>
-
-    
 
 </resources>
