--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="events_interesting">Mark if you find this event interesting</string>
     <string name="events_location">There is no known location for this event</string>
     <string name="mark_event">You marked this event as interesting</string>
+    <string name="unmark_event">You unmarked this event</string>
 
     <!-- Settings Activity -->
     <string name="multilist_title">Events sources</string>
