--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,19 +34,18 @@
     <string name="add_to_calendar">Add this event to my Google Calendar</string>
     <string name="events_map_tag">Location of the event</string>
     <string name="events_interesting">Mark if you find this event interesting</string>
-    <string name="events_location">There is no known location for this event</string>
+    <string name="events_location">The location of this event could not be determined</string>
     <string name="mark_event">You marked this event as interesting</string>
     <string name="unmark_event">You unmarked this event</string>
     <string name="events_origin">Event taken from</string>
 
     <!-- Settings Activity -->
-    <string name="multilist_title">Events sources</string>
-    <string name="multilist_summary">Choose the websites from where the events will be taken</string>
-    <string name="multilist_dialog">Active websites</string>
     <string name="about_title">About</string>
     <string name="about_summary">General information about PathosBerlin</string>
     <string name="legal_title">Legal Notices</string>
-    <string name="legal_summary">Legal attributions to services that PathosBerlin uses</string>
+    <string name="legal_summary">Legal attribution to the services that PathosBerlin uses</string>
+    <string name="possible_organizations_title">Organization of the events</string>
+    <string name="possible_organizations_summary">Choose the way you want the information to be organized</string>
     <string name="general_selection_title">Selection</string>
     <string name="general_selection_summary">Decide the types of events that you want to see</string>
     <string name="multilist_thema_title">Selection of topics</string>
@@ -55,19 +54,20 @@
     <string name="multilist_type_title">Selection of types</string>
     <string name="multilist_type_summary">Choose the kinds of events that interest you</string>
     <string name="multilist_type_dialog">Active types</string>
-    <string name="possible_organizations_title">Organization of the events</string>
-    <string name="possible_organizations_summary">Choose the way you want the information to be organized</string>
+    <string name="multilist_title">Selection of origins</string>
+    <string name="multilist_summary">Choose the websites from where the events will be taken</string>
+    <string name="multilist_dialog">Active origins</string>
     <string name="organization_by_type">By Type</string>
     <string name="organization_by_topic">By Topic</string>
     <string name="organization_by_origin">By Origin</string>
     <string name="pref_category_organization_and_tags_title">Organization and tags</string>
     <string name="pref_category_info_title">Info</string>
-    
+
     <!-- Tags for organization by topic -->
     <string name="art_topic_tag">Art</string>
     <string name="goingout_topic_tag">Going out</string>
     <string name="politics_topic_tag">Politics</string>
-    
+
     <!-- Tags for organization by type -->
     <string name="concert_type_tag">Concert</string>
     <string name="party_type_tag">Party</string>
@@ -75,7 +75,6 @@
     <string name="talk_type_tag">Talk</string>
     <string name="screening_type_tag">Screening</string>
     <string name="other_type_tag">Other</string>
- 
 
     <!-- Legal Noticies Activity -->
     <string name="googleplay_tag">Google Play services attribution:</string>
@@ -168,7 +167,8 @@
         <item>By Type</item>
         <item>By Origin</item>
     </string-array>
-	<!-- Old array
+    <!--
+    Old array
 	<string-array name="sites_array_values">
         <item>I Heart Berlin</item>
         <item>Berlin Art Parasites</item>
@@ -179,5 +179,8 @@
         <item>Stress Faktor</item>
         <item>Index</item>
     </string-array>
-	 -->
+    -->
+    <string name="title_activity_manifesto">ManifestoActivity</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
