--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_about">About</string>
     <string name="title_activity_legal_notices">Legal Notices</string>
+    <string name="title_activity_manifesto">Manifesto</string>
 
     <!-- Main Activity -->
     <string name="loading_events">Click the button to load the events</string>
@@ -40,6 +41,8 @@
     <string name="events_origin">Event taken from</string>
 
     <!-- Settings Activity -->
+    <string name="manifesto_title">Manifesto</string>
+    <string name="manifesto_summary">The meaning of life!</string>
     <string name="about_title">About</string>
     <string name="about_summary">General information about PathosBerlin</string>
     <string name="legal_title">Legal Notices</string>
@@ -104,6 +107,7 @@
     <string name="time_unknown"></string>
     <string name="nothing"></string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
     <!-- Arrays -->
     <string-array name="empty_array" />
@@ -180,7 +184,6 @@
         <item>Index</item>
     </string-array>
     -->
-    <string name="title_activity_manifesto">ManifestoActivity</string>
-    <string name="action_settings">Settings</string>
+    
 
 </resources>
