--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,7 +83,7 @@
 </string>
 	<string name="consume">\tLet Berlin consume you.</string>
 	<string name="antimanifesto">
-(If you are against the mystification of Berlin and think that all this is bullshit, don\'t worry, you can still use this app as a way of getting interesting events)
+(If you are against mythologizing Berlin and think that all this is bullshit, don\'t worry, you can still use this app as a way of receiving interesting events)
 	</string>
 	<string name="pathos_definition">
 <b>Etymology</b>
@@ -102,12 +102,14 @@ From Ancient Greek πάθος (pathos, “suffering”).
     \n
     <b>4.</b> (theology, philosophy) In theology and existentialist ethics following Kierkegaard and Heidegger, a deep and abiding commitment of the heart, as in the notion of "finding your passion" as an important aspect of a fully lived, engaged life.
 	\n
-	<b>5.</b> <u>(technology) A programmer\'s attempt to reunite zeros and ones to create an Android app that might help him explore his own limits and live the last part of his youth to its fullest.</u>
+	<b>5.</b> <u>(technology) A developer\'s attempt to reunite 0\'s and 1\'s to create an Android app that might help him explore his own limits and live the last part of his youth to its fullest.</u>
 	</string>
 
     <!-- Legal Noticies Activity -->
     <string name="googleplay_tag">Google Play services attribution:</string>
     <string name="googleplay_attribution">Google play services is not available at the moment</string>
+    <string name="used_websites_tag">Information extracted from the following websites:</string>
+    <string name="used_websites_attribution">I Heart Berlin,Metal Concerts,White Trash,Goth Datum,Stress Faktor,Index</string>
 
     <!-- About Activity -->
     <string name="version">Version 1.0</string>
